# gauss-jordan

./: meson.build
src/: gauss-jordan.c  gauss-jordan.h  main.c  rational.c  rational.h
